# ols-automator

./: .gitignore  Dockerfile  Makefile  README.md  config-sample.yaml  pyproject.toml
app/: main.py  metrics.py
app/models/: __init__.py  config.py  models.py
app/routes/: events.py  items.py
app/services/: a2a_client.py  agent_rag.py  orchestrator.py
docs/: openapi.json
local_testing/: README.md  config.yaml  stub_agent.py
local_testing/agents/: cluster-ops.yaml  deployer.yaml
scripts/: generate_openapi_schema.py
tests/unit/: conftest.py  test_a2a_client.py  test_agent_rag.py  test_config.py  test_events.py  test_items.py  test_metrics.py  test_models.py  test_openapi.py  test_orchestrator.py
